--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="styles/style.css" />
 		<title>My traffic light</title>
 	</head>
 
@@ -43,6 +43,12 @@
 				</div>
 			</section>
 		</article>
-		<script src="index.js"></script>
+		<script src="js/state.js"></script>
+		<script src="js/DOM-elements.js"></script>
+		<script src="js/initial-state.js"></script>
+		<script src="js/functions/change-color-functions.js"></script>
+		<script src="js/functions/flashing-lights-functions.js"></script>
+		<script src="js/functions/sequence-light-functions.js"></script>
+		<script src="js/events.js"></script>
 	</body>
 </html>
